--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,6 +54,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply overscroll-none bg-background text-foreground;
   }
 }
